Added background image

--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <link rel="stylesheet" href="./style.css">
 </head>
 <body>
-    
+    <p>Photo by <a href="https://unsplash.com/@n8rayfield?utm_source=unsplash&utm_medium=referral&utm_content=creditCopyText">nate rayfield</a> on <a href="https://unsplash.com/photos/_WR6tUIAJe8?utm_source=unsplash&utm_medium=referral&utm_content=creditCopyText">Unsplash</a>
+    </p>
 </body>
 </html>
