Added form and placeholder text

--- a/index.html
+++ b/index.html
@@ -7,7 +7,90 @@
     <link rel="stylesheet" href="./style.css">
 </head>
 <body>
-    <p>Photo by <a href="https://unsplash.com/@n8rayfield?utm_source=unsplash&utm_medium=referral&utm_content=creditCopyText">nate rayfield</a> on <a href="https://unsplash.com/photos/_WR6tUIAJe8?utm_source=unsplash&utm_medium=referral&utm_content=creditCopyText">Unsplash</a>
-    </p>
+    <div class="contents">
+        <div class="imagebar">
+           <div class="logo-section">
+                <!--img class="odin-logo" src="./odin-lined.png"-->
+                <h1>ODIN</h1> 
+           </div>
+           <p>
+            <a href="https://unsplash.com/@n8rayfield?utm_source=unsplash&utm_medium=referral&utm_content=creditCopyText">nate rayfield</a> on <a href="https://unsplash.com/photos/_WR6tUIAJe8?utm_source=unsplash&utm_medium=referral&utm_content=creditCopyText">Unsplash</a>
+           </p>
+        </div>
+        <div class="main-form">
+            <div class="placeholder-text">
+                <p>This is not a real online service! You know you need something like this in your life to help you realize your deepest dreams</p>
+                <p>Sign up <em>now</em> to get started.</p>
+                <p class="gapped-ftext">You <em>know</em> you want to.</p>
+                <p class="gapped-stext">Lets do this!</p>
+            </div>
+            <form>
+                <label for="first-name">FIRST NAME</label>
+                <input type="text" id="first-name" name="first-name" required>
+                <label for="last-name">LAST NAME</label>
+                <input type="text" id="last-name" name="last-name" required>
+                <label for="mail">EMAIL</label>
+                <input type="email" name="mail" id="mail" required>
+                <label for="pwd">PASSWORD</label>
+                <input type="password" id="pwd" name="password" required>
+                <label for="confirm-pwd">CONFIRM PASSWORD</label>
+                <input type="password" id="confirm-pwd" name="confirm-pwd">
+
+                <button type="submit">CREATE ACCOUNT</button>
+            </form>
+        </div>
+    </div>
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 </body>
 </html>
