Added logo styling

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <div class="contents">
         <div class="imagebar">
            <div class="logo-section">
-                <!--img class="odin-logo" src="./odin-lined.png"-->
+                <img class="odin-logo" src="./odin-lined.png">
                 <h1>ODIN</h1> 
            </div>
            <p>
@@ -19,7 +19,7 @@
         </div>
         <div class="main-form">
             <div class="placeholder-text">
-                <p>This is not a real online service! You know you need something like this in your life to help you realize your deepest dreams</p>
+                <p>This is not a real online service! You know you need something like this in your life to help you realize your deepest dreams.</p>
                 <p>Sign up <em>now</em> to get started.</p>
             </div>
             <p class="gapped-ftext">You <em>know</em> you want to.</p>
@@ -36,7 +36,7 @@
                     </div>
                     <div>
                         <label for="pwd">PASSWORD</label>
-                        <input type="password" id="pwd" name="password" placeholder="Not a real password" required>
+                        <input type="password" id="pwd" name="password" placeholder="Don't use a real password" required>
                     </div>
                 </fieldset>
                 <fieldset class="right-fieldset">
