Added copyright styling

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
                 <img class="odin-logo" src="./odin-lined.png">
                 <h1>ODIN</h1> 
            </div>
-           <p>
+           <p>Image is from 
             <a href="https://unsplash.com/@n8rayfield?utm_source=unsplash&utm_medium=referral&utm_content=creditCopyText">nate rayfield</a> on <a href="https://unsplash.com/photos/_WR6tUIAJe8?utm_source=unsplash&utm_medium=referral&utm_content=creditCopyText">Unsplash</a>
            </p>
         </div>
