Added styling for logo background

--- a/index.html
+++ b/index.html
@@ -9,21 +9,27 @@
 <body>
     <div class="contents">
         <div class="imagebar">
-           <div class="logo-section">
-                <img class="odin-logo" src="./odin-lined.png">
-                <h1>ODIN</h1> 
+            <div class="logo-section">
+                <div class="logo">
+                    <img class="odin-logo" src="./odin-lined.png">
+                    <h1>ODIN</h1> 
+               </div>
+            </div>
+           <div class="image-ownership">
+            <p>Image is from 
+                <a href="https://unsplash.com/@n8rayfield?utm_source=unsplash&utm_medium=referral&utm_content=creditCopyText">nate rayfield</a> on <a href="https://unsplash.com/photos/_WR6tUIAJe8?utm_source=unsplash&utm_medium=referral&utm_content=creditCopyText">Unsplash</a>
+            </p>
            </div>
-           <p>Image is from 
-            <a href="https://unsplash.com/@n8rayfield?utm_source=unsplash&utm_medium=referral&utm_content=creditCopyText">nate rayfield</a> on <a href="https://unsplash.com/photos/_WR6tUIAJe8?utm_source=unsplash&utm_medium=referral&utm_content=creditCopyText">Unsplash</a>
-           </p>
+
         </div>
         <div class="main-form">
             <div class="placeholder-text">
-                <p>This is not a real online service! You know you need something like this in your life to help you realize your deepest dreams.</p>
-                <p>Sign up <em>now</em> to get started.</p>
+                <p>This is not a real online service! You know you need something like this in your life to help you realize your deepest dreams.
+                    <p>Sign up <em>now</em> to get started.</p>
+                </p>
+                <p class="gapped-ftext">You <em>know</em> you want to.</p>
             </div>
-            <p class="gapped-ftext">You <em>know</em> you want to.</p>
-            <p class="gapped-stext">Lets do this!</p>
+            <p class="gapped-stext">Let's do this!</p>
             <form id="my-form">
                 <fieldset class="left-fieldset">
                     <div>
@@ -54,7 +60,11 @@
                 </fieldset>
                 
             </form>
-            <button type="submit" form="my-form">CREATE ACCOUNT</button>
+            <div>
+                <button type="submit" form="my-form">CREATE ACCOUNT</button>
+                <p class="login">Already have an account? <a href="index.html">Log in</a></p>
+            </div>
+
         </div>
     </div>
 
