--- a/index.html
+++ b/index.html
@@ -24,10 +24,9 @@
         </div>
         <div class="main-form">
             <div class="placeholder-text">
-                <p>This is not a real online service! You know you need something like this in your life to help you realize your deepest dreams.
-                    <p>Sign up <em>now</em> to get started.</p>
-                </p>
-                <p class="gapped-ftext">You <em>know</em> you want to.</p>
+                <p>This is not a real online service! You know you need something like this in your life to help you realize your deepest dreams. </p>
+                <p>Sign up <em>now</em> to get started.</p>
+                <p>You <em>know</em> you want to.</p>
             </div>
             <p class="gapped-stext">Let's do this!</p>
             <form id="my-form">
